  SIunitx by fixing what unceratinties produces.
  (Issue #814)
- Added link to budding `pint-xarray` interface library to the docs, next to
  the link to pint-pandas. (Thanks Tom Nicholas.)
- Removed outdated `_dir` attribute of `UnitsRegistry`, and added `__iter__`
  method so that now `list(ureg)` returns a list of all units in registry.
  (Issue #1072, Thanks Tom Nicholas)


0.11 (2020-02-19)
-----------------

- Added pint-convert script.
- Remove `default_en_0.6.txt`.
- Make `__str__` and `__format__` locale configurable.
  (Issue #984)
- Quantities wrapping NumPy arrays will no longer warning for the changed
  array function behavior introduced in 0.10.
  (Issue #1029, Thanks Jon Thielen)
- **BREAKING CHANGE**:
  The array protocol fallback deprecated in version 0.10 has been removed.
  (Issue #1029, Thanks Jon Thielen)
- Now we use `pyproject.toml` for providing `setuptools_scm` settings
- Remove `default_en_0.6.txt`
- Reorganize long_description.
- Moved Pi to definitions files.
- Use ints (not floats) a defaults at many points in the codebase as in Python 3
  the true division is the default one.
- **BREAKING CHANGE**:
  Added `from_string` method to all Definitions subclasses. The value/converter
  argument of the constructor no longer accepts an string.
  It is unlikely that this change affects the end user.
- Added additional NumPy function implementations (allclose, intersect1d)
  (Issue #979, Thanks Jon Thielen)
- Allow constants in units by using a leading underscore (Issue #989, Thanks
  Juan Nunez-Iglesias)
- Fixed bug where to_compact handled prefix units incorrectly (Issue #960)


0.10.1 (2020-01-07)
-------------------

- Fixed bug introduced in 0.10 that prevented creation of size-zero Quantities
  from NumPy arrays by multiplication.
  (Issue #977, Thanks Jon Thielen)
- Fixed several Sphinx issues. Fixed intersphinx hooks to all classes missing.
  (Issue #881, Thanks Guido Imperiale)